--- a/.env.yaml
+++ b/.env.yaml
@@ -1,3 +1,3 @@
-PROJECT_ID: YOUR_PROJECT_ID
-LOCATION: YOUR_LOCATION
-CONCURRENCY_LIMIT: YOUR_CONCURRENCY_LIMIT
+PROJECT_ID: "YOUR_PROJECT_ID"
+LOCATION: "YOUR_LOCATION"
+CONCURRENCY_LIMIT: "YOUR_CONCURRENCY_LIMIT"
